# mobile_manipulator

./: README.md
doc/: Dockerfile  Makefile  conf.py  docker-compose.yaml  index.rst
doc/arch/: index.rst
doc/arch/pkg/: index.rst  mobile_manipulator.rst  mobile_manipulator_bringup.rst  mobile_manipulator_description.rst  mobile_manipulator_gazebo_sim.rst  mobile_manipulator_navigation.rst  mobile_manipulator_perception.rst
doc/dev/: doc.rst  getting_started.rst  index.rst  project_structure.rst  style.rst
doc/usage/: bringup.rst  description.rst  gazebo_sim.rst  index.rst  install.rst  navigation.rst  perception.rst
docs/: index.rst
mobile_manipulator/: CMakeLists.txt  mobile_manipulator.repos  package.xml  patches.yaml
mobile_manipulator/patches/: dual_laser_merger.diff  ugv_sdk.diff
mobile_manipulator/scripts/: patch_repos.py
mobile_manipulator_bringup/: CMakeLists.txt  package.xml
mobile_manipulator_bringup/config/: bringup.yaml  sensor_processing.yaml  sensors.yaml
mobile_manipulator_bringup/launch/: bringup.launch.py  sensor_processing.launch.py  visualize.launch.py
mobile_manipulator_bringup/rviz/: display.rviz  sensors.rviz  visualize.rviz
mobile_manipulator_description/: CMakeLists.txt  package.xml
mobile_manipulator_description/launch/: description.launch.py  display.launch.py
mobile_manipulator_description/rviz/: display.rviz
mobile_manipulator_description/urdf/: empty.xacro  frame.xacro  mobile_manipulator.urdf  mobile_manipulator.xacro  parts.xacro  robots.xacro  sensors.xacro
mobile_manipulator_gazebo_sim/: CMakeLists.txt  package.xml
mobile_manipulator_gazebo_sim/config/: controllers.yaml  gz_bridge.yaml  gz_bridge_global.yaml  gz_bridge_robot.yaml
mobile_manipulator_gazebo_sim/launch/: sim.launch.py  spawn.launch.py
mobile_manipulator_gazebo_sim/urdf/: controls.xacro  gazebo.xacro  ros2_control.xacro  sensors.xacro
mobile_manipulator_gazebo_sim/worlds/: depo.sdf
mobile_manipulator_navigation/: CMakeLists.txt  package.xml
mobile_manipulator_navigation/config/: navigation.yaml
mobile_manipulator_navigation/launch/: navigation.launch.py
mobile_manipulator_navigation/rviz/: visualize.rviz
mobile_manipulator_perception/: CMakeLists.txt  package.xml
mobile_manipulator_perception/config/: perception.yaml  rosbag_to_mapping_data.yaml
mobile_manipulator_perception/launch/: perception.launch.py  record.launch.py
mobile_manipulator_perception/rviz/: visualize.rviz
mobile_manipulator_perception/scripts/: rosbag_to_mapping_data.sh
