<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mobile_manipulator_description</name>
    <version>0.0.1</version>
    <description>Mobile manipulator robot description</description>
    <maintainer email="r13921006@ntu.edu.tw">Jack Lo</maintainer>
    <license>TODO</license>
    <author email="r13921006@ntu.edu.tw">Jack Lo</author>

    <!-- build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- execution dependencies -->
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

    <exec_depend>tracer_description</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
