<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mobile_manipulator_perception</name>
    <version>0.0.1</version>
    <description>Mobile manipulator perception</description>
    <maintainer email="r13921006@ntu.edu.tw">Jack Lo</maintainer>
    <license>TODO</license>
    <author email="r13921006@ntu.edu.tw">Jack Lo</author>

    <!-- build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- execution dependencies -->
    <exec_depend>isaac_mapping_ros</exec_depend>
    <exec_depend>isaac_ros_h264_encoder</exec_depend>
    <exec_depend>isaac_ros_nvblox</exec_depend>
    <exec_depend>isaac_ros_visual_global_localization</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
